# unuran

./: .gitignore  AUTHORS  Announcement-0.1.0  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  README.win32  THANKS  TODO  TODO.txt  UPGRADE  UPGRADING  acinclude.m4  autogen.sh  configure.ac  hmake  howto_update_version_numbers.txt  makewin.sh
tests/: Makefile.am  README.conf  README.tests  make_test_files.pl  t_arou.conf  t_ars.conf  t_auto.conf  t_cext.conf  t_cstd.conf  t_dari.conf  t_dau.conf  t_deprecated_tdrgw.conf  t_deprecated_vmt.conf  t_dext.conf  t_dgt.conf  t_distr.conf  t_distr_cemp.conf  t_distr_condi.conf  t_distr_cont.conf  t_distr_corder.conf  t_distr_cvec.conf  t_distr_cvemp.conf  t_distr_cxtrans.conf  t_distr_discr.conf  t_distr_matr.conf  t_dsrou.conf  t_dss.conf  t_dstd.conf  t_empk.conf  t_empl.conf  t_gibbs.conf  t_hinv.conf  t_hist.conf  t_hitro.conf  t_hrb.conf  t_hrd.conf  t_hri.conf  t_info.conf  t_itdr.conf  t_mcorr.conf  (+35 more)
tests/testdistributions/: Makefile.am  c_sawtooth_contpdf.c  c_sawtooth_discpdf.c  c_w_pdf_from_logpdf.c  c_with_multiple_of_pdf.c  c_wo_logpdf.c  testdistributions.h  vc_cauchy_RoU_ball.c  vc_special_correlations_ar1.c  vc_special_correlations_constantrho.c  vc_w_marginals.c  vc_wo_logpdf.c
trunk/: AUTHORS  Announcement-0.1.0  COPYING  ChangeLog  INSTALL  KNOWN-PROBLEMS  MANIFEST  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  autogen.sh  config.h.in  configure  configure.ac  configure.in  hmake  makewin.sh
trunk/codegen/: Makefile.am  PDFgen.c.in  acg.c  anuran.pl.in  codegen.c  codegen_C.c  codegen_FORTRAN.c  codegen_JAVA.c  codegen_UNURAN.c  codegen_source.h  headergen.c.in  make_PDFgen.pl  make_acg.pl  make_anuran.pl  make_codegen.pl  make_headergen.pl  make_php.pl  make_test_PDFgen.pl  make_test_codegen.pl  make_web.pl  readPDF.pl  read_PDF.pl  read_test_conf.pl  tdr_codegen.c  tdr_codegen_C.c  tdr_codegen_FORTRAN.c  tdr_codegen_JAVA.c  tdr_codegen_UNURAN.c  test.c  test.conf  unuran_acg.h  unurgen.c  unurgen.h
trunk/codegen/tests/: Makefile  Makefile.am  read_test_conf.pl  test.conf  test_acg.pl  test_acg_conf.pl  test_urand.pl  urand.pl  xxx.pl
trunk/doc/: DISTRIBUTION_to_texi.pl  ERROR_to_texi.pl  FuncString.texi  METHOD_to_texi.pl  Makefile.am  Makefile.in  README  README.doc  Str_API.texi  URNG_to_texi.pl  change_distr.perl  defaults.perl  description.perl  distr.perl  distr.texi  distr_cont.perl  distr_discr.perl  distr_discrete.perl  distr_lib.perl  distrref.perl  examples.h  examples_to_texi.perl  fig-pdf-beta.tex  fig-pdf-cauchy.tex  fig-pdf-exponential.tex  fig-pdf-gamma.tex  fig-pdf-laplace.tex  fig-pdf-lognormal.tex  fig-pdf-normal.tex  fig-pdf-pareto.tex  fig-pdf-powerexponential.tex  fig-pdf-uniform.tex  funcref.perl  geninfo.perl  glossary.dh  glossary.h  index.dh  internals.perl  intro.h  intro.texi  (+26 more)
trunk/doc/figures/: Makefile.am  discrete_inversion.eps  discrete_inversion.tex  inversion.tex  inversion.txt  rejection_from_constant_hat.eps  rejection_from_constant_hat.txt  rou-cauchy.txt  texpict2img.pl
trunk/doc/src/: Makefile.am  README  arvag.dh  examples.dh  glossary.dh  intro.dh  make_texi.pl  methods.dh  references.dh  stddist.dh  unuran_method_requirements.texi
trunk/examples/: Makefile.am  Makefile.in  example.c  example1.c  example1_str.c  example2.c  example3.c  example4.c  example4_str.c  example_FuncStr.c  example_anti.c  example_anti_str.c  example_cont.c  example_cpp.cpp  example_discr.c  example_emp.c  example_mcorr.c  example_vemp.c  example_vmt.c  example_vmt_0.c  example_vmt_1.c  run.c  test.c  test1.c  test2.c  test3.c  test4.c
trunk/experiments/: Makefile  Makefile.am  convergence.pl  expect.c  make_timing_table.c  timing2tex.pl  timings_chap_8.conf
trunk/run/: Makefile  Makefile.am  acg.c  description.txt  fmain.c  fstr.c  fstrmain.c  gen_stringpars.pl  getopttst.c  hit.c  lotto.c  main.c  matr.c  mcrun.c  meanvarcor.c  nix  pars.c  pars.h  parser.c  parsetest.c  parstest.c  run.c  run_acg.c  run_timing.c  scanner.c  scanpars.h  something.c  spheres.c  stringpars.c  stringpars.c.base  try.c  try_source.h  uniftest.pl
trunk/scripts/: Makefile.am  codegrep.pl  compute_machine_constants.c  merge_h.pl  read_PDF.pl  run_valgrind.sh
trunk/src/: Makefile.am  Makefile.in  README  unur_cookies.h  unur_defs.h  unur_source.h  unur_struct.h  unur_typedefs.h  unuran.h.in  unuran_config.h
trunk/src/distr/: Makefile.am  Makefile.in  beta.c  cauchy.c  cemp.c  cemp.h  chi2.c  cmat.c  cmat.h  condi.c  condi.h  cont.c  cont.h  corder.c  corder.h  cvec.c  cvec.h  cvec_struct.h  cvemp.c  cvemp.h  cxtrans.c  cxtrans.h  discr.c  discr.h  distr.c  distr.h  distr_source.h  distr_struct.h  exponential.c  exponential_gen.c  gamma.c  gamma_gen.c  laplace.c  lognormal.c  lomax.c  matr.c  matr.h  normal.c  normal_gen.c  pareto.c  (+6 more)
trunk/src/distributions/: Makefile.am  README  beta.c  beta_gen.c  burr.c  burr_gen.c  c_beta.c  c_beta_gen.c  c_burr.c  c_burr_gen.c  c_cauchy.c  c_cauchy_gen.c  c_chi.c  c_chi_gen.c  c_chisquare.c  c_exponential.c  c_exponential_gen.c  c_extreme-I.c  c_extreme-II.c  c_extreme-II_gen.c  c_extreme-I_gen.c  c_extremeI.c  c_extremeII.c  c_extremeII_gen.c  c_extremeI_gen.c  c_gamma.c  c_gamma_gen.c  c_gig.c  c_gig_gen.c  c_laplace.c  c_laplace_gen.c  c_logistic.c  c_logistic_gen.c  c_lognormal.c  c_lomax.c  c_lomax_gen.c  c_normal.c  c_normal_gen.c  c_pareto.c  c_pareto_gen.c  (+81 more)
trunk/src/experimental/: Makefile.am  ball.c  ball.h  ball_struct.h  gibbs.c  gibbs.h  gibbs_struct.h  hitro.c  hitro.h  hitro_struct.h  (+19 more)
trunk/tests/: Makefile.am  README.conf  README.tests  arou.conf  auto.conf  corder.conf  cstd.conf  dari.conf  dau.conf  dgt.conf  distr.conf  distr_cemp.conf  distr_cont.conf  distr_cvec.conf  distr_cvemp.conf  distr_discr.conf  dsrou.conf  dstd.conf  empk.conf  gsrou.conf  hinv.conf  list_of_distributions.c  make_test_files.pl  ninv.conf  run_test_with_Mathematica.c  srou.conf  ssr.conf  stdr.conf  stringparser.conf  support.c  t_arou.conf  t_auto.conf  t_corder.conf  t_cstd.conf  t_dari.conf  t_dau.c  t_dau.conf  t_dgt.c  t_dgt.conf  t_distr.conf  (+72 more)
(+933 files in other folders)
