dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(src/unuran_config.h)
AM_INIT_AUTOMAKE(unuran, 0.0.15)
AM_CONFIG_HEADER(config.h)

dnl things required by automake
AC_ARG_PROGRAM
AC_PROG_MAKE_SET

dnl Check for which system.
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_CHECK_TOOL(RANLIB, ranlib, :)
AC_CHECK_TOOL(AR, ar, :)
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_AWK

dnl Checks for libraries.
dnl cephes: Stephen L. Moshier's library of mathematical functions 
AC_CHECK_LIB(md, lgam)
dnl prng: Otmar Lendl's library for pseudo random number generators
AC_CHECK_LIB(prng, prng_new)
dnl libm: the standard math library
AC_CHECK_LIB(m, sqrt)

dnl Checks for header files
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h malloc.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_C_INLINE
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(strtod)


dnl versuch
dnl AC_ARG_WITH(xxx, \
dnl	[  --with-prng             use prng library for uniform random number generation], \
dnl	 AC_DEFINE(junk) \
dnl	echo ${withval}, \
dnl	 cal)

AC_OUTPUT( \
	Makefile \
        scripts/Makefile \
	src/Makefile \
	src/methods/Makefile \
	src/distributions/Makefile \
	src/tests/Makefile \
	src/uniform/Makefile \
	doc/Makefile \
        tests/Makefile \
	examples/Makefile )

dnl -----------------------------------------




