dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(src/unuran_config.h)
AM_INIT_AUTOMAKE(unuran, 0.2.1)
AM_CONFIG_HEADER(config.h)

dnl add dmalloc support
AM_WITH_DMALLOC

dnl things required by automake
AC_ARG_PROGRAM
AC_PROG_MAKE_SET

dnl Check for which system.
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_CHECK_TOOL(RANLIB, ranlib, :)
AC_CHECK_TOOL(AR, ar, :)
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_AWK

dnl Checks for libraries.
dnl libm: the standard math library
AC_CHECK_LIB(m, main)
dnl prng: Otmar Lendl's library for pseudo random number generators
AC_CHECK_LIB(prng, prng_new)
AC_CHECK_HEADERS(prng.h)
dnl RngStream: Pierre L'Ecuyers multiple random stream generator
AC_CHECK_LIB(rngstream, RngStream_CreateStream)
AC_CHECK_HEADERS(RngStream.h)
dnl GSL: GNU Scientific Library
AC_CHECK_LIB(gslcblas,main)
AC_CHECK_LIB(gsl, main)
AC_CHECK_HEADERS(gsl/gsl_rng.h)

dnl cephes: Stephen L. Moshier's library of mathematical functions 
dnl However, at the moment we do not use it any more.
dnl AC_CHECK_LIB(md, lgam)

dnl Checks for header files
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h malloc.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_C_INLINE

dnl Checks for library functions.
AC_CHECK_FUNCS(strtod strtol)
AC_CHECK_FUNCS(gettimeofday)

dnl We need Mathematica(R) for some tests
AC_CHECK_PROG(have_mathematica,math,true,false)
AM_CONDITIONAL(HAVE_MATHEMATICA, test x$have_mathematica = xtrue)
dnl AM_CONDITIONAL(HAVE_MATHEMATICA,true)
dnl AM_CONDITIONAL(HAVE_MATHEMATICA,false)


AC_OUTPUT( \
	Makefile \
        scripts/Makefile \
	src/Makefile \
	src/distributions/Makefile \
	src/methods/Makefile \
	src/parser/Makefile \
	src/specfunct/Makefile \
	src/tests/Makefile \
	src/uniform/Makefile \
	doc/Makefile \
	codegen/Makefile \
	codegen/tests/Makefile \
        tests/Makefile \
	examples/Makefile \
	experiments/Makefile )

dnl -----------------------------------------




